--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.12",
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
